--- a/paginasWeb/15_agenda/15_agenda.html
+++ b/paginasWeb/15_agenda/15_agenda.html
@@ -83,11 +83,14 @@
             <i class="fa fa-envelope w3-xxlarge"></i>
             <p>CONTATO</p>
         </a>
+        <!-- ----------------------Chrystie---------------------- -->        
         <!-- Galeria -->
         <a href="#galeria" class="w3-bar-item w3-button w3-padding-large w3-hover-black w3-hover-text-cyan w3-text-white">
             <i class="fa fa-photo w3-xxlarge"></i>
             <p>Galeria</p>
-        </a>       
+        </a>   
+        <!-- ----------------------Chrystie---------------------- -->
+
     </nav>
     <!--SideBar-->
 
