--- a/paginasWeb/15_agenda/15_agenda.html
+++ b/paginasWeb/15_agenda/15_agenda.html
@@ -275,7 +275,7 @@
 
                 <div class="w3-twothird">
                  <!-- Currículo -->
-                    <h3 class="w3-text-cyan">Chrystie Akemi Takagi Kurashima</h3>
+                    <h3 class="w3-text-cyan">Hwang Ye-ji</h3>
                     <h6 class="w3-text-cyan">Formação Acadêmica</h6>
                         <p>Graduada em Tecnologia de Construção Civil(Edifícios) pela Faculdade de Tecnologia de São Paulo (2/2019) <br>
                         Cursando técnico em Desenvolvimento de Sistemas EaD pela Etec (2/2020)
@@ -304,7 +304,7 @@
             </li>
             
             <li>    
-                <a href="https://www.clipart.email/download/15387796.html">Chrystie Akemi Takagi Kurashima</a>
+                <a href="https://www.clipart.email/download/15387796.html">Hwang Ye-ji</a>
             </li>
             </ol>
 
@@ -480,7 +480,7 @@
                         Os nomes dos(as) docentes e suas informações são fictícios. <br>
                         Fonte das Imagens:
                     </h6>
-                           <a href="https://www.clipart.email/download/15387796.html">Chrystie Akemi Takagi Kurashima</a>                   
+                           <a href="https://www.clipart.email/download/15387796.html">Hwang Ye-ji</a>                   
                 </div>        
             </div>
             <!--                     botões                      -->
