--- a/JavaScript/jsInline.html
+++ b/JavaScript/jsInline.html
@@ -1,6 +1,6 @@
 <!--
- 	Programa:  exibe números de 0 a 100.
- 	Tags: javascript externo, laço de repetição para
+ 	Programa:  Exibe mensagem ao clicar no botão.
+ 	Tags: javascript inline, getElementById
  	Data: 05/12/2020
  	Autor: Chrystie
 -->
@@ -14,10 +14,11 @@
         <title>JavaScript</title>
     </head>
 <body>
-  <p id="teste">Clique para mostrar a mensagem!</p>
+ 
+ <p id="teste">Clique para mostrar a mensagem!</p>
   <button type="button" onClick="document.getElementById('teste').innerHTML = 'SoOrpresa!' ">
       Ver mensagem 
   </button>
+ 
 </body>
-
 </html>
